--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <script src="https://use.fontawesome.com/4320b8ddd2.js"></script>
   <title>React Portfolio</title>
   <style>#root .loading { position: fixed; top: 0; right: 0; left: 0; bottom: 0; display: flex; justify-content: center; align-items: center; }</style>
 </head>
