--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
   <script src="https://use.fontawesome.com/4320b8ddd2.js"></script>
-  <title>React Portfolio</title>
+  <title>Marianne Kelly Portfolio</title>
   <style>#root .loading { position: fixed; top: 0; right: 0; left: 0; bottom: 0; display: flex; justify-content: center; align-items: center; }</style>
 </head>
 <body>
@@ -19,5 +20,6 @@
       </svg>
     </div>
   </div>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 </body>
 </html>
