--- a/public/200.html
+++ b/public/200.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <script src="https://use.fontawesome.com/4320b8ddd2.js"></script>
   <title>Marianne Kelly Portfolio</title>
   <style>#root .loading { position: fixed; top: 0; right: 0; left: 0; bottom: 0; display: flex; justify-content: center; align-items: center; }</style>
@@ -21,5 +22,5 @@
     </div>
   </div>
   <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-<script type="text/javascript" src="/vendor-6f69ae740115d668601a.js"></script><script type="text/javascript" src="/app-6f69ae740115d668601a.js"></script></body>
+<script type="text/javascript" src="/vendor-4179f15616cef68861bb.js"></script><script type="text/javascript" src="/app-4179f15616cef68861bb.js"></script></body>
 </html>
