--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <meta property="og:title" content="Marianne's Portfolio">
 <meta property="og:image" content="http://mariannekelly.com/images/mkelly1.jpg">
-<meta property="og:description" content="Marianne is a front end web devloper with a graphic design background.">
+<meta property="og:description" content="Marianne is a front end web developer with a marketing and graphic design background.">
 <meta property="og:url" content="http://mariannekelly.com">
 
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
