--- a/public/200.html
+++ b/public/200.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <meta property="og:title" content="Marianne's Portfolio">
 <meta property="og:image" content="http://mariannekelly.com/images/mkelly1.jpg">
-<meta property="og:description" content="Marianne is a front end web devloper with a graphic design background.">
+<meta property="og:description" content="Marianne is a front end web developer with a marketing and graphic design background.">
 <meta property="og:url" content="http://mariannekelly.com">
 
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
@@ -27,5 +27,5 @@
       </svg>
     </div>
   </div>
-<script type="text/javascript" src="/vendor-8849446b5c797fd0f849.js"></script><script type="text/javascript" src="/app-8849446b5c797fd0f849.js"></script></body>
+<script type="text/javascript" src="/vendor-f06e960ecfb851a92964.js"></script><script type="text/javascript" src="/app-f06e960ecfb851a92964.js"></script></body>
 </html>
