--- a/public/200.html
+++ b/public/200.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127103169-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-127103169-1');
+</script>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -27,5 +37,5 @@
       </svg>
     </div>
   </div>
-<script type="text/javascript" src="/vendor-1d0f0f18c9b2c886c33e.js"></script><script type="text/javascript" src="/app-1d0f0f18c9b2c886c33e.js"></script></body>
+<script type="text/javascript" src="/vendor-e23d213e48e9fc0447bc.js"></script><script type="text/javascript" src="/app-e23d213e48e9fc0447bc.js"></script></body>
 </html>
