--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-127103169-1');
+  ga('require', 'eventTracker');
+ga('require', 'outboundLinkTracker');
+ga('require', 'urlChangeTracker');
+
+ga('send', 'pageview');
 </script>
 
   <meta charset="UTF-8">
