--- a/public/200.html
+++ b/public/200.html
@@ -9,7 +9,7 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-127103169-1');
-  
+
 </script>
 
   <meta charset="UTF-8">
@@ -17,12 +17,12 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <meta property="og:title" content="Marianne's Portfolio">
 <meta property="og:image" content="http://mariannekelly.com/images/mkelly1.jpg">
-<meta property="og:description" content="Marianne is a front end web developer with a marketing and graphic design background.">
+<meta property="og:description" content="Marianne is a UX designer and front end web developer with a marketing and design background.">
 <meta property="og:url" content="http://mariannekelly.com">
 
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <script src="https://use.fontawesome.com/4320b8ddd2.js"></script>
+  <script src="https://kit.fontawesome.com/b5a27b84cb.js" crossorigin="anonymous"></script>
   <title>Marianne Kelly Portfolio</title>
   <style>#root .loading { position: fixed; top: 0; right: 0; left: 0; bottom: 0; display: flex; justify-content: center; align-items: center; }</style>
 </head>
@@ -38,5 +38,5 @@
       </svg>
     </div>
   </div>
-<script type="text/javascript" src="/vendor-04ba9b9ea4fb9f3dc54f.js"></script><script type="text/javascript" src="/app-04ba9b9ea4fb9f3dc54f.js"></script></body>
+<script type="text/javascript" src="/vendor-68955904bb9f9dd80fec.js"></script><script type="text/javascript" src="/app-68955904bb9f9dd80fec.js"></script></body>
 </html>
