--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 <meta property="og:image" content="http://mariannekelly.com/images/mkelly1.jpg">
 <meta property="og:description" content="Marianne is a UX designer and front end web developer with a marketing and design background.">
 <meta property="og:url" content="http://mariannekelly.com">
-
+<meta name="format-detection" content="telephone=no" x-ms-format-detection="none"/>
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <script src="https://kit.fontawesome.com/b5a27b84cb.js" crossorigin="anonymous"></script>
